# geom-utils

./: .gitignore  .project  .pydevproject  .pypirc  README.md  pyproject.toml  requirements.txt  setup.py  test.py
.github/workflows/: python-package-test.yml  release-package.yml
dev/: colormaps.py  config-scan.json  makeIsoSurfaceMesh.py  run_scan.py  test_cog-dev.py  test_cog.py  test_convert.py  test_indexer.py  test_iso.py  test_overlay.py  test_parsing.py  test_pathlib.py
scripts/: README  aggregateGeoTypes.py  collect_meta.py  config-scan.json.in  create_empty.py  doProcessOSM.sh  filterOSMByAttribute.py  getLatestOSM.sh  merge_csv.py  runGeomProximity.py  scan.py  skimGrid.py
src/pygeom/: __init__.py  geom.py  utils.py
src/pygeom/process/: __init__.py  collect.py  load.py  tools.py
