
[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"


[project]
name = "pygeom"
version = "0.9.1"

requires-python = ">= 3.10"
readme = "README.md"
license = "MIT"



maintainers = [
  {name = "UR", email = "ur@gmail.com"}
]
authors = [
  {name = "UR", email = "ur@gmail.com"}
]
dependencies = [
  "shapely",
        "pyproj",
        "geographiclib"   ,
        "pandas>=2.3",
        "numpy",
        "fiona",
        "concave_hull"
]

[project.urls]
Repository = "https://github.com/uwer/geom-utils.git"
Issues = "https://github.com/uwer/geom-utils/issues"